--- a/DamePizzu.Android/DamePizzu.Android.csproj
+++ b/DamePizzu.Android/DamePizzu.Android.csproj
@@ -114,5 +114,8 @@
       <Name>DamePizzu</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\materialdesignicons-webfont.ttf" />
+  </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
