--- a/DamePizzu/DamePizzu.csproj
+++ b/DamePizzu/DamePizzu.csproj
@@ -13,8 +13,14 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helpers\" />
+    <Folder Include="Model\" />
+    <Folder Include="Data\" />
+    <Folder Include="ViewModel\" />
   </ItemGroup>
 </Project>
