Big final update
- Add assert
- Make order as favourite
- HotReloading orders
- Remove cart
- Fix views

--- a/DamePizzu/DamePizzu.csproj
+++ b/DamePizzu/DamePizzu.csproj
@@ -23,5 +23,6 @@
     <Folder Include="Model\" />
     <Folder Include="ViewModel\" />
     <Folder Include="Services\" />
+    <Folder Include="Convertor\" />
   </ItemGroup>
 </Project>
