--- a/DamePizzu.Android/DamePizzu.Android.csproj
+++ b/DamePizzu.Android/DamePizzu.Android.csproj
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\materialdesignicons-webfont.ttf" />
+    <AndroidAsset Include="Assets\star.png" />
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
